# axum-surrealdb-example

./: Cargo.toml  README.me
assets/: index.html
secret/: secret.html
src/: main.rs
