[package]
name = "tmp_surreal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-routing"] }
tower-http = { version = "0.5.0", features = ["fs"] }
surrealdb = { version = "1.0.0" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.0"
chrono = "0.4"
